# Mimir

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/ltk_hashdb/: CHANGELOG.md  Cargo.toml
crates/ltk_hashdb/benches/: real.rs
crates/ltk_hashdb/examples/: bench_real.rs  compression_lab.rs  gen_charts.rs
crates/ltk_hashdb/src/: error.rs  extended.rs  hash.rs  header.rs  layered.rs  lib.rs  reader.rs  writer.rs
crates/ltk_hashdb/tests/: golden.rs  proptests.rs  roundtrip.rs  snapshot.rs
crates/ltk_hashdb/tests/snapshots/: snapshot__fixture_file_bytes.snap  snapshot__fixture_u32_header.snap
crates/ltk_hashdb/utils/: mod.rs
crates/ltk_mimir_cache/: CHANGELOG.md  Cargo.toml  README.md
crates/ltk_mimir_cache/src/: dir.rs  error.rs  fetch.rs  fsutil.rs  lib.rs  lock.rs  manifest.rs  store.rs  update.rs
crates/ltk_mimir_cache/tests/: refresh.rs  refresh_async.rs  store.rs
crates/ltk_mimir_cache/tests/common/: mod.rs
crates/ltk_mimir_cli/: Cargo.toml
crates/ltk_mimir_cli/src/: bundle.rs  main.rs  merge.rs  publish.rs  testutil.rs  update.rs
crates/ltk_mimir_gen/: Cargo.toml
crates/ltk_mimir_gen/src/: context.rs  hunt.rs  lib.rs  mine.rs  unknown.rs
crates/ltk_mimir_gen/src/guessers/: cross.rs  lcu.rs  mod.rs  numbers.rs  seeds.rs  skins.rs  util.rs  variants.rs  words.rs
crates/ltk_mimir_gen/tests/: hunt.rs
docs/: BENCHMARKS.md  CONSUMERS.md  FORMAT.md
