[package]
name = "ltk_hashdb"
description = "The .hashdb binary format: an mmap-backed read-only integer-keyed string table (reader + streaming writer)"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
memmap2.workspace = true
zeekstd.workspace = true
zstd.workspace = true
xxhash-rust.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Pins the case-insensitive hashes to ltk_hash's WadHash/BinHash in unit tests.
ltk_hash.workspace = true
plotters.workspace = true
serde.workspace = true
serde_json.workspace = true
proptest.workspace = true
insta.workspace = true
criterion.workspace = true

[[bench]]
name = "real"
harness = false

[lints]
workspace = true
